<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="360dp"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/FirstName"
            android:hint="@string/Nombre" android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="359dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/LastName"
            android:hint="@string/Apellido" android:autofillHints=""
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/FirstName" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="387dp"
            android:layout_height="524dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/LastName">

        <TextView
                android:text="@string/Nacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="68dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <Spinner
                android:layout_width="273dp"
                android:layout_height="wrap_content" android:id="@+id/spinner"
                android:prompt="@string/GeneroHint" android:entries="@array/ArregloGeneros"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView"/>
        <EditText
                android:id="@+id/et_mostrar_fecha_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/formato_fecha"
                android:autofillHints=""
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"/>
        <TextView
                android:text="@string/Genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="52dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <RadioGroup
                android:layout_width="211dp"
                android:layout_height="72dp"
                android:id="@+id/rbtn_group"
                android:checkedButton="@+id/rbtn_1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent">
            <RadioButton
                    android:text="@string/rbtn_Si"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rbtn_1"
            />
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/rbtn_2"
                    android:text="@string/rbtn_No"
            />
        </RadioGroup>
        <TextView
                android:text="@string/lbl_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <CheckBox
                android:text="@string/lbl_java"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox"
                android:layout_marginStart="28dp" app:layout_constraintStart_toEndOf="@+id/textView4"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/rbtn_group"/>
        <TextView
                android:text="@string/Lenguaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
        <Button
                android:text="@string/txt_enviar"
                android:layout_width="165dp"
                android:layout_height="44dp" android:id="@+id/button"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="52dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.072"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/checkBox5"/>
        <Button
                android:text="@string/txt_Limpiar"
                android:layout_width="164dp"
                android:layout_height="45dp" android:id="@+id/button2"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="52dp" android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/button" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/checkBox6"/>
        <CheckBox
                android:text="@string/lbl_csharp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox5"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox3" android:layout_marginStart="28dp"
                app:layout_constraintStart_toEndOf="@+id/textView4"/>
        <CheckBox
                android:text="@string/lbl_Python"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox6"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox4" android:layout_marginStart="35dp"
                app:layout_constraintStart_toEndOf="@+id/checkBox5" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.507"/>
        <CheckBox
                android:text="@string/lbl_Js"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" android:layout_marginStart="28dp"
                app:layout_constraintStart_toEndOf="@+id/textView4"/>
        <CheckBox
                android:text="@string/lbl_Go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox4"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox2" android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/checkBox3" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.509"/>
        <CheckBox
                android:text="@string/lbl_Cobol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkBox2"
                android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/checkBox"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/rbtn_group"
                app:layout_constraintHorizontal_bias="0.508"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>