<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultsActivity">

    <TextView
            android:text="@string/Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lbl_resnombre"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/textView5"/>
    <TextView
            android:text="@string/Apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lbl_resapellido"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/textView7"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"/>
    <TextView
            android:text="@string/Nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lbl_resnacimiento"
            android:layout_marginStart="120dp"
            app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginEnd="145dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/textView9"/>
    <TextView
            android:text="@string/Genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lbl_resgenero"
            android:layout_marginStart="146dp" app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginEnd="146dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"/>
    <TextView
            android:text="@string/lbl_legusta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView13"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lbl_resprogramar"
            android:layout_marginStart="60dp" app:layout_constraintStart_toEndOf="@+id/textView13"
            android:layout_marginEnd="142dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"/>
    <TextView
            android:text="@string/Lenguaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView15"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TableLayout
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/table_lenguajes" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_resprogramar" app:layout_constraintHorizontal_bias="0.72">

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>